add css till figure section

--- a/index.html
+++ b/index.html
@@ -18,58 +18,65 @@
 
     <!-- Main -->
     <main>
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <p class="sub-title">Scritto da The Booleaner</p>
-            <p>il 10/10/2020</p>
+    <div class="container">
 
-                <figure>
-                <img src="./img/tim-1.jpg" alt="Foto di Tim Berners-Lee nr.1">
-                <img src="./img/tim-2.jpg" alt="Foto di Tim Berners-Lee nr.2">
-                <figcaption>1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</figcaption>
-                <figcaption>2nd Photo: Wikimedia, by Paul Clarke</figcaption>
-                </figure>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                <p class="gray-text">Scritto da <span class="lightblue-text">The Booleaner</span>
+                <br>
+                <span class="small-text">il 10/10/2020</span></p>
+                    <figure>
+                    <img src="./img/tim-1.jpg" alt="Foto di Tim Berners-Lee nr.1">
+                    <img src="./img/tim-2.jpg" alt="Foto di Tim Berners-Lee nr.2">
+                    <figcaption class="small-text">1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</figcaption>
+                    <figcaption class="small-text">2nd Photo: Wikimedia, by Paul Clarke</figcaption>
+                    </figure>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quidem reprehenderit alias, aliquid impedit deleniti nesciunt consequatur ab sapiente molestias tempora esse atque facere necessitatibus vel doloribus iure dolore deserunt!</p>
+                    
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quidem reprehenderit alias, aliquid impedit deleniti nesciunt consequatur ab sapiente molestias tempora esse atque facere necessitatibus vel doloribus iure dolore deserunt!</p>
 
-        <ul>
-            <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi reiciendis unde quaerat optio eos a illo laudantium ut incidunt nobis nesciunt praesentium iusto quae assumenda itaque ipsum, accusantium animi nam!</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iusto quia quos assumenda neque, enim magni vel mollitia rem aliquam ducimus expedita maiores corporis, dolorem perferendis doloribus sunt modi? Suscipit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis, repellat reiciendis laboriosam quod perspiciatis nisi ipsa. A nostrum nihil possimus rerum autem nulla, sed veritatis delectus, expedita vero ducimus ipsum!</li>
-        </ul>
+            <ul>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi reiciendis unde quaerat optio eos a illo laudantium ut incidunt nobis nesciunt praesentium iusto quae assumenda itaque ipsum, accusantium animi nam!</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iusto quia quos assumenda neque, enim magni vel mollitia rem aliquam ducimus expedita maiores corporis, dolorem perferendis doloribus sunt modi? Suscipit.</li>
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis, repellat reiciendis laboriosam quod perspiciatis nisi ipsa. A nostrum nihil possimus rerum autem nulla, sed veritatis delectus, expedita vero ducimus ipsum!</li>
+            </ul>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
-                </tr>
-                <tr>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
-                </tr>
-                <tr>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
-                </tr>
-            </tbody>
-        </table>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae autem saepe beatae repellat nobis nesciunt, et ea quasi ipsum tenetur incidunt voluptas rerum, sit ex illum ratione non quo accusantium.
-    </p>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
+                        </tr>
+                    </tbody>
+                </table>
+            <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae autem saepe beatae repellat nobis nesciunt, et ea quasi ipsum tenetur incidunt voluptas rerum, sit ex illum ratione non quo accusantium.
+            </p>
     </main>
-    <!-- /Main -->
+        <!-- /Main -->
+
+        <!-- Footer -->
     <footer>
-        <p>Potrebbero interessarti</p>
+            <p class="gray-text">Potrebbero interessarti</p>
     </footer>
+    <div >
+    <!-- /Footer -->
 </body>
 </html>
