fixed div container + title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Booleaner</title>
     <link rel="stylesheet" href="./css/stylesheet.css">
 </head>
 <body>
@@ -17,9 +17,8 @@
     <!-- /Header -->
 
     <!-- Main -->
-    <main>
     <div class="container">
-
+    <main>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
                 <p class="gray-text">Scritto da <span class="lightblue-text">The Booleaner</span>
                 <br>
@@ -76,7 +75,7 @@
     <footer>
             <p class="gray-text">Potrebbero interessarti</p>
     </footer>
-    <div >
+    </div >
     <!-- /Footer -->
 </body>
 </html>
