fixed list + article

--- a/index.html
+++ b/index.html
@@ -19,25 +19,37 @@
     <!-- Main -->
     <div class="container">
     <main>
-            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-                <p class="gray-text">Scritto da <span class="lightblue-text">The Booleaner</span>
-                <br>
-                <span class="small-text">il 10/10/2020</span></p>
-                    <figure>
+        <!-- Title -->
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <!-- Sub title -->
+            <p class="gray-text">Scritto da <span class="lightblue-text">The Booleaner</span>
+            <br>
+            <span class="small-text">il 10/10/2020</span></p>
+
+                <!-- Figure Section -->
+                <figure>
                     <img src="./img/tim-1.jpg" alt="Foto di Tim Berners-Lee nr.1">
                     <img src="./img/tim-2.jpg" alt="Foto di Tim Berners-Lee nr.2">
-                    <figcaption class="small-text">1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</figcaption>
-                    <figcaption class="small-text">2nd Photo: Wikimedia, by Paul Clarke</figcaption>
-                    </figure>
+                        <figcaption class="small-text">1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</figcaption>
+                        <figcaption class="small-text">2nd Photo: Wikimedia, by Paul Clarke</figcaption>
+                </figure>
 
-                    
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quidem reprehenderit alias, aliquid impedit deleniti nesciunt consequatur ab sapiente molestias tempora esse atque facere necessitatibus vel doloribus iure dolore deserunt!</p>
+                <!-- Article Paragraph -->
+                <article>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Numquam assumenda dignissimos obcaecati sit saepe fugiat consequuntur a odio eligendi.
+                    Impedit perspiciatis hic ducimus? Dolor nulla obcaecati ratione placeat consequuntur distinctio optio.
+                    <span class="highlighted-text">Dolor nulla voluptatem temporibus culpa magnam consectetur ut fuga fugit odit.</span>
+                    Illum vero magnam odit voluptate! Maiores ea exercitationem, enim ullam mollitia, excepturi ad maxime consequatur, eligendi in suscipit eum.
+                    Consequuntur cum a et veritatis rerum corporis, dolor ad, nihil soluta reprehenderit quis, blanditiis sint hic nostrum dolore ipsum!</p>
+                </article> 
 
-            <ul>
-                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi reiciendis unde quaerat optio eos a illo laudantium ut incidunt nobis nesciunt praesentium iusto quae assumenda itaque ipsum, accusantium animi nam!</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iusto quia quos assumenda neque, enim magni vel mollitia rem aliquam ducimus expedita maiores corporis, dolorem perferendis doloribus sunt modi? Suscipit.</li>
-                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis, repellat reiciendis laboriosam quod perspiciatis nisi ipsa. A nostrum nihil possimus rerum autem nulla, sed veritatis delectus, expedita vero ducimus ipsum!</li>
-            </ul>
+                <!-- Unordered List -->        
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque dicta modi maiores. Cumque voluptatem quod ducimus similique sint nihil nesciunt rem fugit amet odit, veritatis dolorem laborum maiores quasi!</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam dignissimos, vel sequi eum illo impedit consequatur accusamus ipsam vero, reiciendis iure fugiat incidunt debitis, pariatur dolorum! Architecto ducimus consequuntur facere.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi a sunt quisquam modi hic, asperiores assumenda quia error totam in sit quaerat iure aperiam libero aliquam sed repudiandae harum inventore.</li>
+                </ul>
 
                 <table>
                     <thead>
@@ -65,9 +77,11 @@
                         </tr>
                     </tbody>
                 </table>
+            <article>   
             <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae autem saepe beatae repellat nobis nesciunt, et ea quasi ipsum tenetur incidunt voluptas rerum, sit ex illum ratione non quo accusantium.
             </p>
+            </article> 
     </main>
         <!-- /Main -->
 
