fixed table + both article

--- a/index.html
+++ b/index.html
@@ -51,37 +51,39 @@
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi a sunt quisquam modi hic, asperiores assumenda quia error totam in sit quaerat iure aperiam libero aliquam sed repudiandae harum inventore.</li>
                 </ul>
 
-                <table>
+                <table cellspacing="0">
                     <thead>
                         <tr>
-                            <th>Lorem ipsum dolor</th>
-                            <th>Lorem ipsum dolor</th>
-                            <th>Lorem ipsum dolor</th>
+                            <th class="small-column">Lorem ipsum dolor</th>
+                            <th class="small-column">Lorem ipsum dolor</th>
+                            <th class="large-column">Lorem ipsum dolor</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr class="colored-line">
                             <td>Lorem ipsum dolor</td>
                             <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quos. Id voluptate recusandae molestiae ab facilis? Nostrum minima perferendis blanditiis?</td>
                         </tr>
                         <tr>
                             <td>Lorem ipsum dolor</td>
                             <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
-                        </tr>
-                        <tr>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quos. Id voluptate recusandae molestiae ab facilis? Nostrum minima perferendis blanditiis?</td>                        </tr>
+                        <tr class="colored-line">
                             <td>Lorem ipsum dolor</td>
                             <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore temporibus cupiditate quasi rem porro ab eius cumque, quam ex, facere velit, aut odio et cum commodi dolorem vitae? Saepe possimus modi velit, soluta nulla odio! Odit non explicabo illo accusamus repellat totam quasi animi rem in omnis, perferendis doloribus, error ad veritatis, saepe dolorem hic sit excepturi fugiat recusandae. Consectetur eum laudantium odio reiciendis recusandae ea cumque nam, officiis ullam natus pariatur iste ad placeat ut dolore atque neque dolorem delectus nostrum quisquam perferendis dicta. Rem vero iste facere, exercitationem consequuntur quibusdam cumque ducimus animi perspiciatis veniam quam cum ad?</td>
-                        </tr>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quos. Id voluptate recusandae molestiae ab facilis? Nostrum minima perferendis blanditiis?</td>                        </tr>
                     </tbody>
                 </table>
-            <article>   
-            <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae autem saepe beatae repellat nobis nesciunt, et ea quasi ipsum tenetur incidunt voluptas rerum, sit ex illum ratione non quo accusantium.
-            </p>
-            </article> 
+
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Numquam assumenda dignissimos obcaecati sit saepe fugiat consequuntur a odio eligendi.
+                        Impedit perspiciatis hic ducimus? Dolor nulla obcaecati ratione placeat consequuntur distinctio optio.
+                        Dolor nulla voluptatem temporibus culpa magnam consectetur ut fuga fugit odit.
+                        <span class="highlighted-text">Illum vero magnam odit voluptate! Maiores ea exercitationem, enim ullam mollitia,</span> excepturi ad maxime consequatur, eligendi in suscipit eum.
+                        Consequuntur cum a et veritatis rerum corporis, dolor ad, nihil soluta reprehenderit quis, blanditiis sint hic nostrum dolore ipsum!</p>
+                </article> 
     </main>
         <!-- /Main -->
 
