--- a/index.html
+++ b/index.html
@@ -16,82 +16,95 @@
     </header>
     <!-- /Header -->
 
-    <!-- Main -->
+
     <div class="container">
-    <main>
-        <!-- Title -->
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <!-- Main -->
+        <main>
+            <!-- Title -->
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                
             <!-- Sub title -->
             <p class="gray-text">Scritto da <span class="lightblue-text">The Booleaner</span>
             <br>
             <span class="small-text">il 10/10/2020</span></p>
 
-                <!-- Figure Section -->
-                <figure>
-                    <img src="./img/tim-1.jpg" alt="Foto di Tim Berners-Lee nr.1">
-                    <img src="./img/tim-2.jpg" alt="Foto di Tim Berners-Lee nr.2">
-                        <figcaption class="small-text">1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</figcaption>
-                        <figcaption class="small-text">2nd Photo: Wikimedia, by Paul Clarke</figcaption>
-                </figure>
+            <!-- Figure Section -->
+            <figure>
+                <img src="./img/tim-1.jpg" alt="Foto di Tim Berners-Lee nr.1">
+                <img src="./img/tim-2.jpg" alt="Foto di Tim Berners-Lee nr.2">
+                    <figcaption class="small-text">1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</figcaption>
+                    <figcaption class="small-text">2nd Photo: Wikimedia, by Paul Clarke</figcaption>
+            </figure>
 
-                <!-- Article Paragraph -->
-                <article>
+            <!-- Article Paragraph 1 -->
+            <article>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Numquam assumenda dignissimos obcaecati sit saepe fugiat consequuntur a odio eligendi.
-                    Impedit perspiciatis hic ducimus? Dolor nulla obcaecati ratione placeat consequuntur distinctio optio.
-                    <span class="highlighted-text">Dolor nulla voluptatem temporibus culpa magnam consectetur ut fuga fugit odit.</span>
-                    Illum vero magnam odit voluptate! Maiores ea exercitationem, enim ullam mollitia, excepturi ad maxime consequatur, eligendi in suscipit eum.
-                    Consequuntur cum a et veritatis rerum corporis, dolor ad, nihil soluta reprehenderit quis, blanditiis sint hic nostrum dolore ipsum!</p>
-                </article> 
+                Numquam assumenda dignissimos obcaecati sit saepe fugiat consequuntur a odio eligendi.
+                Impedit perspiciatis hic ducimus? Dolor nulla obcaecati ratione placeat consequuntur distinctio optio.
+                <span class="highlighted-text">Dolor nulla voluptatem temporibus culpa magnam consectetur ut fuga fugit odit.</span>
+                Illum vero magnam odit voluptate! Maiores ea exercitationem, enim ullam mollitia, excepturi ad maxime consequatur, eligendi in suscipit eum.
+                Consequuntur cum a et veritatis rerum corporis, dolor ad, nihil soluta reprehenderit quis, blanditiis sint hic nostrum dolore ipsum!</p>
+            </article> 
 
-                <!-- Unordered List -->        
-                <ul>
+            <!-- Unordered List -->        
+            <ul>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque dicta modi maiores. Cumque voluptatem quod ducimus similique sint nihil nesciunt rem fugit amet odit, veritatis dolorem laborum maiores quasi!</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam dignissimos, vel sequi eum illo impedit consequatur accusamus ipsam vero, reiciendis iure fugiat incidunt debitis, pariatur dolorum! Architecto ducimus consequuntur facere.</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi a sunt quisquam modi hic, asperiores assumenda quia error totam in sit quaerat iure aperiam libero aliquam sed repudiandae harum inventore.</li>
                 </ul>
 
-                <table cellspacing="0">
-                    <thead>
-                        <tr>
-                            <th class="small-column">Lorem ipsum dolor</th>
-                            <th class="small-column">Lorem ipsum dolor</th>
-                            <th class="large-column">Lorem ipsum dolor</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="colored-line">
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quos. Id voluptate recusandae molestiae ab facilis? Nostrum minima perferendis blanditiis?</td>
-                        </tr>
-                        <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quos. Id voluptate recusandae molestiae ab facilis? Nostrum minima perferendis blanditiis?</td>                        </tr>
-                        <tr class="colored-line">
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quos. Id voluptate recusandae molestiae ab facilis? Nostrum minima perferendis blanditiis?</td>                        </tr>
-                    </tbody>
-                </table>
+            <!-- Table -->
+            <table cellspacing="0">
+                <thead>
+                    <tr>
+                        <th class="small-column">Lorem ipsum dolor</th>
+                        <th class="small-column">Lorem ipsum dolor</th>
+                        <th class="large-column">Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="colored-line">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore commodi debitis nam dolor laborum ratione saepe tempora illum quod, suscipit libero itaque possimus exercitationem blanditiis eum magni similique accusamus iure totam in deleniti omnis ea.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem velit cumque saepe ipsum reprehenderit ad. Possimus, est sed laborum maiores aliquam magni fugit, incidunt voluptatem enim deleniti reprehenderit fugiat ad maxime, ipsam quos laboriosam cumque.</td>
+                    </tr>
+                    <tr class="colored-line">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore voluptate repellat corporis omnis. Aspernatur fugit quisquam, harum mollitia, totam tempore impedit vero aut soluta, voluptate nesciunt at! Voluptatibus exercitationem, necessitatibus amet quisquam consequatur eligendi aliquid!</td>
+                    </tr>
+                </tbody>
+            </table>
 
-                <article>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Numquam assumenda dignissimos obcaecati sit saepe fugiat consequuntur a odio eligendi.
-                        Impedit perspiciatis hic ducimus? Dolor nulla obcaecati ratione placeat consequuntur distinctio optio.
-                        Dolor nulla voluptatem temporibus culpa magnam consectetur ut fuga fugit odit.
-                        <span class="highlighted-text">Illum vero magnam odit voluptate! Maiores ea exercitationem, enim ullam mollitia,</span> excepturi ad maxime consequatur, eligendi in suscipit eum.
-                        Consequuntur cum a et veritatis rerum corporis, dolor ad, nihil soluta reprehenderit quis, blanditiis sint hic nostrum dolore ipsum!</p>
-                </article> 
-    </main>
+            <!-- Article Paragraph 2 -->
+            <article>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Numquam assumenda dignissimos obcaecati sit saepe fugiat consequuntur a odio eligendi.
+                Impedit perspiciatis hic ducimus? Dolor nulla obcaecati ratione placeat consequuntur distinctio optio.
+                Dolor nulla voluptatem temporibus culpa magnam consectetur ut fuga fugit odit.
+                <span class="highlighted-text">Illum vero magnam odit voluptate! Maiores ea exercitationem, enim ullam mollitia,</span> excepturi ad maxime consequatur, eligendi in suscipit eum.
+                Consequuntur cum a et veritatis rerum corporis, dolor ad, nihil soluta reprehenderit quis, blanditiis sint hic nostrum dolore ipsum!</p>
+            </article> 
+        </main>
         <!-- /Main -->
 
         <!-- Footer -->
-    <footer>
+        <footer>
             <p class="gray-text">Potrebbero interessarti</p>
-    </footer>
+            <div class="footer-image footer-image-1">
+                <span>Lorem ipsum dolor</span>
+            </div>
+            <div class="footer-image footer-image-2">
+                <span>Lorem ipsum dolor</span>
+            </div>
+        </footer>
+        <!-- /Footer -->
     </div >
-    <!-- /Footer -->
+
 </body>
 </html>
